Devops/Kubernetes/Deployment-appserver.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  # unique name for deployemnt appserver
  name: deployment-appserver 
  labels: 
    deploy: appserver
spec:
  progressDeadlineSeconds: 3600 
  replicas: 3
  selector: 
    matchLabels:
      app: deploy
  template:      
    metadata: 
      # pod name
      name: pod-app
      labels: 
        app: deploy
    spec: 
      containers: 
      - image: tomcat:8 
        name: appserver
        ports: 
        - containerPort: 8080
