Devops/Kubernetes/Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
spec:
  containers:
  - name: appserver
    image: tomcat:8
