Devops/Kubernetes/NodePort-svc.yml
apiVersion: v1 
kind: Service
metadata: 
   name: NodePort-Service
spec: 
  selector: 
     web: nginx  
  type: NodePort
  ports: 
  - nodePort: 30001 
    port: 80
    targetPort: 80
