Devops/Kubernetes/service-lb.yml
apiVersion: v1
kind: Service
metadata: 
   name: service-lb
spec:
  selector:
    web: nginx
  # classic network load balancer - doesn't have knowledge on http/https req's
  type: LoadBalancer
  ports: 
  - port: 80
    targetPort: 80
