Devops/Kubernetes/service-np.yml
apiVersion: v1 
kind: Service
metadata: 
   name: service-np
spec: 
  selector: 
     web: nginx  
  type: NodePort
  ports: 
  - nodePort: 30007
    port: 80
    targetPort: 80
