Devops/Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata: 
   name: service-lb
spec: 
  ports: 
    - port: 80
      targetPort: 8080
  type: LoadBalancer 
  selector:
    app: deploy
