Devops/Kubernetes/INGRESS-2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress  
  annotations:  
    kubernetes.io/ingress.class: nginx 
    cert-manager.io/issuer: letsencrypt-staging   
spec: 
  tls:
  - hosts:
    - a0bd8b92de69b44e3ab47ac3e3ada05e-629630616.us-east-1.elb.amazonaws.com
    secretName: quickstart-example-tls
  rules:
  - host: a0bd8b92de69b44e3ab47ac3e3ada05e-629630616.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: deployment-webserver
          servicePort: 80
